examples/type_system/failing/114_keyword_alias_case.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    case 1 {
        0 -> 0,
        _ -> 1,
    }
}
